@@ -6,26 +6,26 @@ import java.util.Queue;
 public class Usuari {
 	
 	private String Username, Password;
-	private boolean Admin;
+	private Boolean Admin;
 	private ArrayList<CercaComunitats> Cerques_fetes;
-	private int nCerques;
+	private Integer nCerques;
 	private Queue<Integer> eliminats;
 	
 	
 	//Pre: No hi existeix cap usuari amb el mateix Username
 	//Post: Crea un Usuari amb Username=Username, Password=Password i Admin=Admin
-	public Usuari (String Username, String Password, boolean Admin) {
+	public Usuari (String Username, String Password, Boolean Admin) {
         this.Username = Username;
         this.Password = Password;
         this.Admin = Admin;
         Cerques_fetes = new ArrayList<CercaComunitats>();
-        nCerques = 0;
+        nCerques = Integer.valueOf(0);
 	}
 	
 	//Pre: cert
 	//Post: Admin = true
 	public void ferAdmin() {
-		Admin = true;				
+		Admin = Boolean.TRUE;				
 	}
 
 	//Pre: Cert
@@ -54,20 +54,20 @@ public class Usuari {
 	
 	//Pre: Cert
 	//Post: Retorna el numero de cerques fetes
-	public int getNumCerques() {
+	public Integer getNumCerques() {
 		return nCerques;
 	}
 	
 	//Pre: i < Cerques_fetes.size() && es l'index d'una CercaComunitats a Cerques_fetes
 	//Post: Retorna el CercaComunitats amb índex i
-	public CercaComunitats getCerca(int i) {
-		return Cerques_fetes.get(i);
+	public CercaComunitats getCerca(Integer i) {
+		return Cerques_fetes.get(i.intValue());
 	}
 	
 	//Pre: Cert
 	//Post: ++nCerques i c pertany a Cerques_fetes
-	public int addCerca(CercaComunitats c) {
-		int i;
+	public Integer addCerca(CercaComunitats c) {
+		Integer i;
 		if(eliminats.isEmpty()) {
 			if (nCerques == Cerques_fetes.size()) {
 				Cerques_fetes.ensureCapacity(nCerques+5);
@@ -75,35 +75,35 @@ public class Usuari {
 			i = nCerques;
 		}
 		else {
-			i = eliminats.poll().intValue(); //primer index buit
+			i = eliminats.poll(); //primer index buit
 		}
-		Cerques_fetes.set(i, c);
-		++nCerques;
+		Cerques_fetes.set(i.intValue(), c);
+		nCerques = Integer.valueOf(nCerques.intValue()+1);
 		return i;		
 	}
 	
 	//Pre: c es a Cerques_fetes
 	//Post: c no es a Cerques_fetes i --Cerques_fetes.size() (o --nCerques)
-	public boolean removeCerca(CercaComunitats c) {
-		int i = Cerques_fetes.indexOf(c);
-		Cerques_fetes.set(i, null);
-		--nCerques;
-		eliminats.add(new Integer(i));
-		return true;
+	public Boolean removeCerca(CercaComunitats c) {
+		Integer i = Integer.valueOf(Cerques_fetes.indexOf(c));
+		Cerques_fetes.set(i.intValue(), null);
+		nCerques = Integer.valueOf(nCerques.intValue()-1);
+		eliminats.add(Integer.valueOf(i));
+		return Boolean.TRUE;
 	}
 	
 	//Pre: i < Cerques_fetes.size() && es l'index d'una CercaComunitats a Cerques_fetes
 	//Post: Cerques_fetes ja no conté la CercaComunitats amb index i
-	public boolean removeCerca(int i) {
-		Cerques_fetes.set(i, null);
-		--nCerques;
-		eliminats.add(new Integer(i));
-		return true;
+	public Boolean removeCerca(Integer i) {
+		Cerques_fetes.set(i.intValue(), null);
+		nCerques = Integer.valueOf(nCerques.intValue()-1);
+		eliminats.add(Integer.valueOf(i));
+		return Boolean.TRUE;
 	}
 	
 	//Pre: Cert
 	//Post: retorna cert si l'usuari es Admin
-	public boolean esAdmin() {
+	public Boolean esAdmin() {
 		return Admin;
 	}
 
